<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.android.quizzapp.MainActivity"

    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:fontFamily="casual"
        android:paddingLeft="30dp"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="60sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/orange"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="18sp"

        />

    <RadioGroup
        android:id="@+id/rdgMain"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="40dp"

        >

        <RadioButton
            android:id="@+id/fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange"
            android:fontFamily="casual"
            android:text="@string/fashion"
            android:textColor="@color/orange"
            android:textSize="40sp" />

        <RadioButton
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green"
            android:fontFamily="casual"
            android:text="@string/Health"
            android:textColor="@color/green"
            android:textSize="40sp" />

        <RadioButton
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/turquoise"
            android:fontFamily="casual"
            android:text="@string/Sports"
            android:textColor="@color/turquoise"
            android:textSize="40sp" />
    </RadioGroup>


</LinearLayout>
